--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-navigation",
+  "name": "@mls-digital/react-native-navigation",
   "version": "1.1.406",
   "description": "React Native Navigation - truly native navigation for iOS and Android",
   "license": "MIT",
